[package]
name = "randomorgapi"
version = "0.1.0"
authors = ["maljaroudi <vitality@posteo.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.55"
serde = { version = "1.0.112", features = ["derive"] }
clap = "2.33.1"
nanoid = "0.3.0"
ureq = { version = "1.2.0", features = ["json"]}
